MOD file structure

--- a/app/index.html
+++ b/app/index.html
@@ -64,15 +64,15 @@
 </body>
 
 <!-- bower components -->
-<script src="../bower_components/jquery/dist/jquery.min.js"></script>
-<script src="../bower_components/angular/angular.min.js"></script>
-<script src="../bower_components/angular-route/angular-route.min.js"></script>
-<script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/angular-route/angular-route.min.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 <script src="app.js"></script>
 
 <!-- controllers -->
-<script src="controllers/jobsCtrl.js"></script>
+<script src="src/controllers/jobsCtrl.js"></script>
 
 
 
