ADD buildView with ctrl

--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,7 @@
 
 <!-- controllers -->
 <script src="src/controllers/jobsCtrl.js"></script>
+<script src="src/controllers/buildCtrl.js"></script>
 
 
 
