--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@
 <!-- controllers -->
 <script src="src/controllers/jobsCtrl.js"></script>
 
-
+<!-- services -->
+<script src="src/services/shipApi.js"></script>
 
 </html>
