ADD d3 as service

--- a/app/index.html
+++ b/app/index.html
@@ -57,13 +57,17 @@
 <script src="bower_components/angular-route/angular-route.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
+<!-- app -->
 <script src="app.js"></script>
+
+<!-- services -->
+<script src="src/services/shipApi.js"></script>
+<script src="src/services/d3.js"></script>
 
 <!-- controllers -->
 <script src="src/controllers/jobsCtrl.js"></script>
 <script src="src/controllers/buildCtrl.js"></script>
 
-<!-- services -->
-<script src="src/services/shipApi.js"></script>
+
 
 </html>
