ADD lanesGraph backbone

--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,16 @@
 <script src="src/services/shipApi.js"></script>
 <script src="src/services/d3.js"></script>
 
+
+<!-- directives -->
+<script src="src/directives/directives.js"></script>
+
+
+<script src="src/directives/lanesGraph/lanesGraph.js"></script>
+<script src="src/directives/lanesGraph/src/lanesGraphCtrl.js"></script>
+
+
+
 <!-- controllers -->
 <script src="src/controllers/jobsCtrl.js"></script>
 <script src="src/controllers/buildCtrl.js"></script>
