--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Dashboard</a></li>
+            <li><a ui-sref="index">Dashboard</a></li>
             <li><a href="#">Settings</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">Help</a></li>
@@ -55,6 +55,7 @@
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-route/angular-route.min.js"></script>
+<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 <!-- app -->
@@ -64,7 +65,6 @@
 <script src="src/services/shipApi.js"></script>
 <script src="src/services/d3.js"></script>
 
-
 <!-- directives -->
 <script src="src/directives/directives.js"></script>
 
@@ -72,12 +72,8 @@
 <script src="src/directives/lanesGraph/lanesGraph.js"></script>
 <script src="src/directives/lanesGraph/src/lanesGraphCtrl.js"></script>
 
-
-
 <!-- controllers -->
-<script src="src/controllers/jobsCtrl.js"></script>
+<script src="src/controllers/appsCtrl.js"></script>
 <script src="src/controllers/buildCtrl.js"></script>
-
-
 
 </html>
