--- a/app/index.html
+++ b/app/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css"/>
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../assets/styles/layout.css"/>
+    <link rel="stylesheet" href="../assets/styles/dashboard.css"/>
+    <link rel="stylesheet" href="../share/pnotify.custom.min.css"/>
 </head>
 <body ng-app="ship" ng-controller="navCtrl">
-    <nav class="navbar navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -44,9 +46,6 @@
             <li><a href="#">Export</a></li>
           </ul>
         </div>
-        <!-- <div ng-view class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-
-        </div> -->
         <div ui-view="mainView" class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
         </div>
@@ -61,16 +60,19 @@
 <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
+<!-- third party -->
+<script src="../share/pnotify.custom.min.js"></script>
+
 <!-- app -->
 <script src="app.js"></script>
 
 <!-- services -->
 <script src="src/services/shipApi.js"></script>
+<script src="src/services/notify.js"></script>
 <script src="src/services/d3.js"></script>
 
 <!-- directives -->
 <script src="src/directives/directives.js"></script>
-
 
 <script src="src/directives/lanesGraph/lanesGraph.js"></script>
 <script src="src/directives/lanesGraph/src/lanesGraphCtrl.js"></script>
@@ -79,6 +81,7 @@
 <script src="src/controllers/navCtrl.js"></script>
 
 <script src="src/controllers/appsCtrl.js"></script>
+<script src="src/controllers/appGeneralCtrl.js"></script>
 <script src="src/controllers/appDetailCtrl.js"></script>
 <script src="src/controllers/buildCtrl.js"></script>
 
