MOD http request to server are working :)

--- a/app/index.html
+++ b/app/index.html
@@ -69,8 +69,12 @@
 <!-- app -->
 <script src="app.js"></script>
 
+<!-- models -->
+<script src="src/models/App.js"></script>
+
 <!-- services -->
 <script src="src/services/shipApi.js"></script>
+<script src="src/services/shipApiUiWrapper.js"></script>
 <script src="src/services/notify.js"></script>
 <script src="src/services/pathParser.js"></script>
 <script src="src/services/d3.js"></script>
