--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,10 @@
 
     <!-- font awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+   
+    <!-- directives -->
+    <link rel="stylesheet" href="src/directives/lanesGraph/assets/css/lanesGraph.css"/>
+
 </head>
 <body ng-app="ship" ng-controller="navCtrl">
     <nav class="navbar navbar-inverse navbar-fixed-top">
