ADD laneTemplate view

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 
     <!-- font awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-   
+
     <!-- directives -->
     <link rel="stylesheet" href="src/directives/lanesGraph/assets/css/lanesGraph.css"/>
 
@@ -97,5 +97,6 @@
 <script src="src/controllers/appDetailCtrl.js"></script>
 <script src="src/controllers/buildsCtrl.js"></script>
 <script src="src/controllers/buildCtrl.js"></script>
+<script src="src/controllers/laneTemplatesCtrl.js"></script>
 
 </html>
