--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,8 @@
 
 <!-- models -->
 <script src="src/models/App.js"></script>
+<script src="src/models/Action_Template.js"></script>
+<script src="src/models/Lane_Template.js"></script>
 
 <!-- services -->
 <script src="src/services/shipApi.js"></script>
