--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
 <script src="src/models/App.js"></script>
 <script src="src/models/Action_Template.js"></script>
 <script src="src/models/Lane_Template.js"></script>
+<script src="src/models/Build.js"></script>
 
 <!-- services -->
 <script src="src/services/shipApi.js"></script>
