--- a/app/index.html
+++ b/app/index.html
@@ -57,9 +57,7 @@
             <li><a href="#">Export</a></li>
           </ul>
         </div>
-        <div ui-view="mainView" class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-
-        </div>
+        <div ui-view="mainView" class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main"></div>
       </div>
     </div>
 </body>
